# SAST-framework

./: README.md  __init__.py  baseline_final_report.json  baseline_report.csv  baseline_utils.py  check_imports.py  command.txt  comparer.py  create_baseline.py  create_baseline_all.py  debug_parser.py  diagnose.py  environment.py  full_framework.py  generate_final_report.py  normalizer.py  performance_metrics.py  pyproject.toml  requirements.txt  run_comparison.py  run_test.py  setup.py  test1.bash  test1.py  test_comparison.py  test_runner.py  test_sarif_parser.py  tools_registry.py
baseline/: baseline_summary.json  baseline_summary.yaml
baseline/bash-examples/: semgrep_baseline.json  shellcheck_baseline.json
baseline/dvpa-python/: semgrep_baseline.json
baseline/insecure-cpp/: cppcheck_baseline.json  semgrep_baseline.json
baseline/insecure-go/: semgrep_baseline.json
baseline/insecure-ruby/: semgrep_baseline.json
baseline/simple-test/: semgrep_baseline.json
config/: comparison_config.yaml  projects.yaml  projects_config.yaml  tools.yaml
docker/: docker-compose.yml
projects/bash-examples/: test1.bash  vulnerable.sh
projects/insecure-go/: test1.go  vulnerable.go
projects/test/: test.py
projects/test-simple/: test.py
reports/: all-dc010a82-d70d-410a-9378-0b8c8cb88b06-report.json  bash-report.html  bash-report.sarif
results/: final_report.json  performance_report.json
results/comparison/: summary.json
scripts/: run_regression.py
src/framework/: __init__.py  main.py
tools/: __init__.py  base_tool.py  cppcheck.py  semgrep.py  shellcheck.py
(+102 files in other folders)
